--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <button>Lancer</button>
       </div>
 
-      <p>Fait avec ❤ pour les Lalafell</p>
+      <p>Fait avec ❤</p>
     </main>
     <script src="script.js"></script>
   </body>
